--- a/CSS/pagina_principal.css
+++ b/CSS/pagina_principal.css
@@ -1,109 +1,152 @@
-body 
-{
-margin: 0;
-padding: 0;
-font-family: Helvetica, Arial, sans-serif;
-color: #666;
-background: #f2f2f2; 
-font-size: 1em;
-line-height: 1.5em;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #666;
+    background-color: PaleGreen;
+    font-size: 1em;
+    line-height: 1.5em;
 }
 
-h1 
-{
-font-size: 2.3em;
-line-height: 1.3em;
-margin: 15px 0;
-text-align: center;
-font-weight: 300;
+h1 {
+    font-size: 2.3em;
+    line-height: 1.3em;
+    margin: 15px 0;
+    text-align: center;
+    font-weight: 300;
 }
 
-p 
-{
-margin: 0 0 1.5em 0;
+p {
+    margin: 0 0 1.5em 0;
 }
 
-img 
-{
-max-width: 100%;
-height: auto;
+img {
+    max-width: 100%;
+    height: auto;
 }
 
-
-#main-header 
-{
-background: #333;
-color: white;
-height: 80px;
-}	
-	
-#main-header a 
-{
-color: white;
+#main-header {
+    background: #333;
+    color: white;
+    height: 80px;
 }
+
+#main-header a {
+    color: white;
+}
+
 
 /*
  * Logo
  */
 
-#logo-header 
-{
-float: left;
-padding: 15px 0 0 20px;
-text-decoration: none;
+#logo-header {
+    float: left;
+    padding: 15px 0 0 20px;
+    text-decoration: none;
 }
 
-#logo-header:hover 
-{
-color: #0b76a6;
-}
-	
-#logo-header .site-name 
-{
-display: block;
-font-weight: 700;
-font-size: 1.2em;
+#logo-header:hover {
+    color: #0b76a6;
 }
 
-#logo-header .site-desc 
-{
-display: block;
-font-weight: 300;
-font-size: 0.8em;
-color: #999;
+#logo-header .site-name {
+    display: block;
+    font-weight: 700;
+    font-size: 1.2em;
 }
-	
 
-#main-content 
-{
-background: white;
-width: 75%;
-max-width: 800px;
-margin: 20px auto;
-box-shadow: 0 0 10px rgba(0,0,0,.1);
+#logo-header .site-desc {
+    display: block;
+    font-weight: 300;
+    font-size: 0.8em;
+    color: #999;
+}
+
+#main-content {
+    background: white;
+    width: 75%;
+    max-width: 800px;
+    margin: 20px auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 #main-content header,
-#main-content .content 
-{
-padding: 40px;
+#main-content .content {
+    padding: 40px;
 }
 
-#main-footer 
-{
-background: #333;
-color: white;
-text-align: center;
-padding: 20px;
-margin-top: 40px;
-}
-#main-footer p 
-{
-margin: 0;
-}
-	
-#main-footer a 
-{
-color: white;
+#main-footer {
+    background: #333;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
 }
 
+#main-footer p {
+    margin: 0;
+}
+
+#main-footer a {
+    color: white;
+}
+
+.carta {
+    --carta-gradient: rgba(0, 0, 0, 0.8);
+    --carta-gradient: #00FF40, #228B22;
+    --carta-blend-mode: overlay;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    box-shadow: 0.05rem 0.1rem 0.3rem -0.03rem rgba(0, 0, 0, 0.45);
+    padding-bottom: 1rem;
+    background-image: linear-gradient(var(--carta-gradient), white max(9.5rem, 27vh));
+    overflow: hidden;
+}
+
+.carta img {
+    border-radius: 0.5rem 0.5rem 0 0;
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    max-height: max(10rem, 30vh);
+    aspect-ratio: 4/3;
+    mix-blend-mode: var(--carta-blend-mode);
+}
+
+.carta img~* {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.carta> :last-child {
+    margin-bottom: 0;
+}
+
+.carta:hover,
+.carta:focus-within {
+    --carta-gradient: #24a9d5 max(8.5rem, 20vh);
+}
+
+.carta h3 {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    text-decoration: underline;
+}
+
+.carta-wrapper {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
+    grid-gap: 1.5rem;
+    max-width: 100vw;
+    width: 120ch;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.carta a {
+    color: inherit;
+}
